--- a/photos/templates/base.html
+++ b/photos/templates/base.html
@@ -19,7 +19,7 @@
   {% endblock %}
 </head>
 
-<body style="background-color: black">
+<body style="background-color: #af3194">
   {% include "navbar.html" %}
 
   {% block content %}
