--- a/photos/templates/index.html
+++ b/photos/templates/index.html
@@ -7,8 +7,8 @@
 <h1 class="mb-4 d-none d-md-block text-center" style="padding-top: 150px;font-size: 80px;font-family: 'Oleo Script', cursive;color:burlywood">
   <strong>Welcome To My Gallery</strong>
 </h1>
-<p style="color: rgb(3, 5, 7);font-size: 15px">Search for photos from categories such as Food, Sports, People, Nature and plants</p><br>
-<div style="padding-bottom: 100px">
+<p style="color: rgb(3, 5, 7);font-size: 15px">Search for photos from categories such as Food, Sports, People, Nature and flowers</p><br>
+<div style="padding-bottom: 10px">
 <a target="_blank" href="{%url 'gallery'%}" class="btn btn-success">View Gallery</a>
 </div>
 </div>
